# orocos_cpp_base

./: CMakeLists.txt  manifest.xml
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  Main.cpp  OrocosHelpers.cpp  OrocosHelpers.hpp  ProxyPort.cpp  ProxyPort.hpp
test/: CMakeLists.txt  test_Dummy.cpp
